@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1065 2012/07/24 19:17:41 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1066 2012/07/26 21:40:50 zmedico Exp $
+
+  26 Jul 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.8.ebuild,
+  -portage-2.2.0_alpha119.ebuild:
+  Remove old versions.
 
   24 Jul 2012; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
   Remove /etc/make.globals symlink code (bug #427862).
